# Alhambra

./: .editorconfig  .gitignore  .gitmodules  Alhambra.sln  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-Example.json  Create-Solution.cmd  README.md  TODO.txt
Alhambra/: Alhambra.cpp  Alhambra.vcxproj  Alhambra.vcxproj.filters  CMakeLists.txt  Resource.rc  TODO.txt  resource.h
Alhambra/resources/: Resource.rc  resource.h
Alhambra/src/: Alhambra.cpp
geometry/: geometry.vcxproj  geometry.vcxproj.filters
geometry/inc/dak/geometry/: constants.h  edge.h  face.h  intersect.h  map.h  rect.h  (+6 more)
geometry/src/: face.cpp  filler.cpp  intersect.cpp  map.cpp  point.cpp  polygon.cpp  rect.cpp  text_utility.cpp  transform.cpp  utility.cpp
geometry_tests/: edge_tests.cpp  face_tests.cpp  geometry_tests.vcxproj  geometry_tests.vcxproj.filters  intersect_tests.cpp  map_tests.cpp  point_tests.cpp  polygon_tests.cpp  rect_tests.cpp  test_helpers.h  utility_tests.cpp
installer/: installer.vdproj
tiling/: CMakeLists.txt  tiling.vcxproj  tiling.vcxproj.filters
tiling/inc/dak/tiling/: explicit_figure.h  extended_figure.h  figure.h  infer.h  infer_helpers.h  infer_mode.h  irregular_figure.h  known_tilings.h  known_tilings_generator.h  mosaic.h  radial_figure.h  rosette.h  scale_figure.h  star.h  tiling.h  tiling_selection.h
tiling/include/dak/tiling/: explicit_figure.h  extended_figure.h  figure.h  infer.h  infer_helpers.h  infer_mode.h  inflation_tiling.h  irregular_figure.h  known_tilings.h  known_tilings_generator.h  mosaic.h  radial_figure.h  rosette.h  scale_figure.h  star.h  tiling.h  tiling_io.h  tiling_selection.h  translation_tiling.h
tiling/mosaics/: 12-6-trigon.tap.txt  12.4.3.tap.txt  15 star.tap.txt  3-8-12.tap.txt  3-8-4-6.tap.txt  6.5.tap.txt  7-shadow.tap.txt  7.4.tap.txt  7.6.tap.txt  8 6 almost 5 -- starred.tap.txt  8 and 8 rings carpet.tap.txt  8-6-5.tap.txt  8.5.tap.txt  9-6 Losange.tap.txt  9.6 almost 5.tap.txt  Abbasid Al-Mustansiriyya Madrasa.tap.txt  Add Doubt Sin.tap.txt  African Birds Migration.tap.txt  Al-Mustansiriyya Gold.tap.txt  Alcazar of Seville.tap.txt  Alien TO.tap.txt  Almost.tap.txt  Are you a square.tap.txt  Blood Vessels.tap.txt  Bloom of May.tap.txt  Bluer shade of sky.tap.txt  Candyland.tap.txt  Chikipoo.tap.txt  Child sky of a thousand suns.tap.txt  Circulatory System.tap.txt  Circus.tap.txt  Coffee Hankerchief.tap.txt  Curvy Hex.tap.txt  Elegant Monster.tap.txt  Flying Vistas of Earth.tap.txt  Girih Crab.tap.txt  Golden Cage.tap.txt  Green Islands.tap.txt  Green Mosque.tap.txt  Hypnotix.tap.txt  (+44 more)
tiling/src/: explicit_figure.cpp  extended_figure.cpp  figure.cpp  infer.cpp  inflation_tiling.cpp  irregular_figure.cpp  known_tilings.cpp  known_tilings_generator.cpp  mosaic.cpp  radial_figure.cpp  rosette.cpp  scale_figure.cpp  star.cpp  tiling.cpp  tiling_io.cpp  tiling_selection.cpp  translation_tiling.cpp
tiling/tilings/: 10.tiling  12-6-trigon.tiling  12.18.tiling  12.4.3.tiling  14.tiling  15 star.tiling  15.6.tiling  16.8.tiling  18.6.tiling  18.9.tiling  18.tiling  20t.tiling  24.12.tiling  24.6.tiling  3-4-6-12.tiling  3-8-12 pieces.tiling  3-8-12.tiling  3-8-4-6.tiling  3.12^2.tiling  3.4.6.tiling  4.5 square.tiling  4.5.tiling  4.6.12.tiling  4.7 Star.tiling  4.7 Stars.tiling  4.8^2.tiling  4^4.tiling  6 Losange.tiling  6-pentille.tiling  6.4 Boats.tiling  6.4 circles.tiling  6.5 flower.tiling  6.5.tiling  6.5x6.tiling  6.tiling  7 et 8.tiling  7.4.tiling  7.6.5.tiling  7.6.tiling  8 6 almost 5.tiling  (+79 more)
tiling_style/: CMakeLists.txt  tiling_style.vcxproj  tiling_style.vcxproj.filters
tiling_style/inc/dak/tiling_style/: colored.h  emboss.h  filled.h  interlace.h  known_mosaics.h  known_mosaics_generator.h  outline.h  sketch.h  style_io.h  thick.h
tiling_style/include/dak/tiling_style/: colored.h  emboss.h  filled.h  interlace.h  known_mosaics.h  known_mosaics_generator.h  outline.h  plain.h  sketch.h  style.h  style_io.h  styled_mosaic.h  thick.h
tiling_style/src/: colored.cpp  emboss.cpp  filled.cpp  interlace.cpp  known_mosaics.cpp  known_mosaics_generator.cpp  mosaic_io.cpp  outline.cpp  plain.cpp  sketch.cpp  style.cpp  style_io.cpp  styled_mosaic.cpp  thick.cpp
tiling_tests/: CMakeLists.txt  plot.py  tiling_io_tests.cpp  tiling_tests.vcxproj  tiling_tests.vcxproj.filters
tiling_tests/src/: tiling_io_tests.cpp  tiling_tests.cpp
tiling_ui_qt/: CMakeLists.txt  tiling_ui_qt.vcxproj  tiling_ui_qt.vcxproj.filters
tiling_ui_qt/inc/dak/tiling_ui_qt/: figure_editor.h  figure_selector.h  layers_selector.h  main_window.h  styles_editor.h  table_widget_with_combo.h  tiling_editor.h  tiling_selector.h  tiling_window.h  utility.h
tiling_ui_qt/include/dak/tiling_ui_qt/: ask.h  drawing.h  figure_editor.h  figure_selector.h  layers_selector.h  main_window.h  mosaic_canvas.h  styles_editor.h  table_widget_with_combo.h  tiling_canvas.h  tiling_description_editor.h  tiling_editor.h  tiling_selector.h  tiling_window.h  utility.h
tiling_ui_qt/src/: ask.cpp  drawing.cpp  figure_editor.cpp  figure_selector.cpp  layers_selector.cpp  main_window.cpp  mosaic_canvas.cpp  styles_editor.cpp  table_widget_with_combo.cpp  tiling_canvas.cpp  tiling_description_editor.cpp  tiling_editor.cpp  tiling_selector.cpp  tiling_window.cpp  utility.cpp
ui/: ui.vcxproj  ui.vcxproj.filters
ui/src/: color.cpp  drawing_base.cpp  eps_drawing.cpp  layer.cpp  layered.cpp  map_layer.cpp  mouse.cpp  transformer.cpp
ui_qt/: ui_qt.vcxproj  ui_qt.vcxproj.filters
ui_qt/src/: ask.cpp  canvas.cpp  convert.cpp  double_editor.cpp  drawing.cpp  drawing_canvas.cpp  int_editor.cpp  layered_canvas.cpp  map_canvas.cpp  message_reporter.cpp  mosaic_canvas.cpp  paint_device_drawing.cpp  paint_device_transformable.cpp  painter_drawing.cpp  painter_transformable.cpp  qt_drawing.cpp  tiling_canvas.cpp  utility.cpp  widget_mouse_emitter.cpp
utility/: utility.vcxproj  utility.vcxproj.filters
utility/src/: text.cpp  text_utility.cpp  undo_stack.cpp
utility_tests/: number_tests.cpp  text_tests.cpp  undo_stack_tests.cpp  utility_tests.vcxproj  utility_tests.vcxproj.filters
(+37 files in other folders)
